Pin by (grand)child PID (#21)
* hidden operations

* moved scripts from template to js file

* added element to open modal

* progress

* adding detections works now

* works now, add detection only shows up for hidden ops

* added check for detection

* hidden autocollect operation will be ignored now

* minor bug fixes

* making hunt abilities and adversary hidden

* changed hidden abilities and adversaries to be loaded in just with python code at runtime rather than as yaml files

* changing access determination to look at agent access instead of operation group

* added duk hover for GUID additions

* removed hidden operations references in py files, and separated abilities and adversary into their own files

* removed hidden op stuff, need to adjust position of add verification button and when to show

* front-end changes

* verification works

* incomplete merge earlier

* newly created manual blue operation now shows up automatically

* moved some css from html to css file

* progress

* rebasing to master

* completing rebase

* made parent pid linking less brittle

* some changes

* pinning by child process works now

* response_svc is made to reload config when pulling its autocollect adversary

* fixed to make looking up by grandchild process id work

* using response_svc's public apply_adversary_config() function

* pid lookup works

* progress

* new gui modal for pinning blue links

* things are working

* cleaned up css

* removed test material from hook.py

* cleaning up

* removed pinned pin row from blue link info

* refactored some names to improve readability

* added spacing for readability

* broke out function for clarity

* missed await

* converting str concatenation to using format()

* addressing chris' comments

* incomplete merge

* removed str cast in format())

* matching response plugin PR, using unique processtrees per host

--- a/static/css/gameboard.css
+++ b/static/css/gameboard.css
@@ -308,3 +308,75 @@ button.pin-save {
     text-align: center;
     font-weight: bold;
 }
+.gp-blue-pin {
+    float: right;
+    margin-top: 10px;
+    width: fit-content;
+    position: absolute;
+}
+.section-profile .gp-blue-pin img {
+    background: none;
+    border: none;
+    height: 18px;
+    margin: 5px;
+}
+#pin-blue-link-form {
+    width: 60%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+#pin-link-host-select {
+    width:40%;
+    margin: 5px;
+    margin-right: 30px;
+    display: none;
+}
+.link-command {
+    width: 78%;
+    display: flex;
+    align-items: center;
+    margin: 5px;
+}
+#pin-blue-link-modal-link-name {
+    color: white;
+}
+#pin-blue-link-modal-desc-text {
+    color: white;
+    width: 40%;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+#pin-blue-link-form .toggle {
+    margin-top: 3px;
+    width: 25%;
+    margin-left: 20px;
+}
+#pin-blue-link-form .slider round {
+    background-color:black;
+}
+#pin-blue-link-form span b {
+    font-size: 13px;
+}
+#piece-pin-input {
+    width: 28%;
+    margin-top: 5px;
+}
+#pin-blue-link-submit {
+    width: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 43%;
+    margin-top: 10px;
+}
+#pin-blue-link-submit-wrapper #save-pin-msg {
+    display: none;
+    float: right;
+    margin-bottom: 0;
+}
+#match-parent-link-form-contents {
+    width:75%;
+    margin-bottom:-35px;
+}
